# mcpplay

./: .gitignore  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  zensical.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
docs/getting-started/: demo-server.md  installation.md  quickstart.md
docs/help/: contributing.md  troubleshooting.md
docs/reference/: cli.md  configuration.md
docs/usage/: forms.md  hot-reload.md  running-servers.md  timeline.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/components/: CapabilityBadge.svelte  FormField.svelte  JsonTree.svelte  ResultView.svelte  SchemaForm.svelte  Timeline.svelte  TimelineEntry.svelte  Toast.svelte  ToolDetail.svelte  ToolList.svelte
frontend/src/lib/: diff.test.ts  diff.ts  schema.test.ts  schema.ts  types.ts  ui.test.ts  ui.ts  ws.test.ts  ws.ts
src/mcpplay/: __main__.py  capability.py  cli.py  demo_server.py  process_manager.py  protocol.py  proxy.py  security.py  server.py  timeline_store.py
src/mcpplay/static/: index.html
src/mcpplay/static/assets/: index-BmIujUOf.css  index-DDpQOc5u.js  index-DGAbYth8.js  index-WwfpXr98.css
tests/: conftest.py  test_capability.py  test_cli.py  test_demo_server.py  test_process_manager.py  test_protocol.py  test_proxy.py  test_security.py  test_server.py  test_timeline_store.py
